[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.8.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn==2.8.3",
    "xxhash",
    "psutil",
    "ninja",
    "packaging",
    "einops",
]

[project.urls]
Homepage = "https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = [
    "torch",
    "einops",
    "psutil",
    "packaging",
    "ninja",
]